# web_app_islamic

./: .gitignore  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  main.py  pyproject.toml
.github/workflows/: config.yml  main_good-habits-io.yml  main_good-habits-io.yml.yml
app/: main.py
app/routes/: prayer_times.py  quran.py
app/utils/: prayer_calc.py  quran_data_sanitize.py  quran_loader.py  quran_metadata.py
static/: hadith.html  index.html  prayer_times.html  quran.html
static/css/: styles.css
static/js/: prayer_times.js  quran.js
static/partials/: footer.html  header.html  include.js
