[tool.poetry]
name = "web-app-islamic"
version = "0.1.0"
description = ""
authors = ["Muhammad <159867482+muhammadabdulbaqi@users.noreply.github.com>"]
readme = "README.md"
packages = []  # 👈 prevents poetry from trying to package the project

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
